@@ -1,7 +1,7 @@
 Package: nor1mix
 Title: Normal (1-d) Mixture Models (S3 Classes and Methods)
 Version: 1.2-2
-Date: 2015-10-22
+Date: 2016-08-24
 Author: Martin Mächler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Description: Onedimensional Normal Mixture Models Classes, for, e.g.,
